--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://unpkg.com/topojson@3"></script>
 </head>
 <body>
     <header>
@@ -16,6 +18,7 @@
                 <li><a id="home" href="#home">Home</a></li>
                 <li><a id="data" href="#data">Data Driven Visualization</a></li>
                 <li><a id="svg" href="#svg">SVG Canvas</a></li>
+                <li><a id="homeworks" href="#homework">Homework 2</a></li>
                 <li><a id="reference" href="#reference">References</a></li>
             </ul>
         </nav>
@@ -24,5 +27,6 @@
 
     </main>
     <script src="js/app.js"></script>
+    <script src="js/homework2.js"></script>
 </body>
 </html>
