:sparkles: Homework 3 with three.js

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
             href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto+Slab:400,700&display=swap"
             rel="stylesheet"
         />
+        <!-- CSS Libraries -->
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        />
+
         <link rel="stylesheet" href="css/style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://unpkg.com/topojson@3"></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"
             integrity="sha512-jaNmuLbHtQ1ND+i63wVvwBd9T2hB3gTnk3x0Pp5R+AJwDdyzMe3t0vQqwUSoI9a/Ol1nscGV/1et4zSwL0P3AA=="
@@ -30,7 +38,8 @@
                         <a id="data" href="#data">Data Driven Visualization</a>
                     </li>
                     <li><a id="svg" href="#svg">SVG Canvas</a></li>
-                    <li><a id="homeworks" href="#homework">Homework 2</a></li>
+                    <li><a id="homework2" href="#homework2">Homework 2</a></li>
+                    <li><a id="homework3" href="#homework3">Homework 3</a></li>
                     <li><a id="reference" href="#reference">References</a></li>
                 </ul>
             </nav>
